--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -1,10 +1,12 @@
 @charset "utf-8";
-@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700');
+/*
+ @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700');
+ */
 
 /**
  * Style variables
  */
-$base-font-family:     'Source Code Pro', monospace !default;
+$base-font-family:     Helvetica, Tahoma, Arial, "PingFang SC", "Hiragino Sans GB", "Heiti SC", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif !default;
 $base-font-size:       12.5px !default;
 $mobile-font-size:     12px !default;
 $base-line-height:     1.5 !default;
